SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/63
  Aliases panel: The selected Alias can now be connected by hitting enter.

Option to warp the Aliases' toolbar to two lines:
  A new toggle button (or checked menu item) in the Aliases toolbar,
  Aliases menu, or Aliases right-click menu allows users
  to switch the Aliases toolbar between one or two lines.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/61
  Search in all open SQL results and cell data dialogs.
  To open the new search dialog use the menu File --> Find in all results, ctrl shift R,
  or the new main window tool bar button.
  Click the leaves in the result tree to preview results.
  Use double click or right mouse of the leaves in the result tree to navigate to
  the SQL results or cell data dialogs that match the search.
  Thanks to SHD (www.shd.de) for sponsoring parts of this feature.
  NOTE: As a consequence of these changes the minimum required Java version is Java 17.

Introduced Java 24 compatibility.

Adjusted mouse double click selection behavior in SQL editor and cell details display to additionally
  stop selection at the characters '/', ':' and '"'
  Note: Before the adjustment double click selection already stopped at '(', ')', ',', ';', '=', '>', '<', '\'

Code completion Plugin: The Plugin offers completion of JOIN ON clauses.
  Example: When ctrl+space is hit after a space char behind
  SELECT * FROM Books bk INNER JOIN Authors
  the first entry of the completion list will be "ON bk.AuthorId = Authors.Id"
  provided that there's a foreign key Books.AuthorId pointing to Authors.Id.

Code completion Plugin: The completion functions (#i,..., #l,..., #r,..., #j,...,) now support table aliases.