@@ -14,7 +14,7 @@ GlobalSearchDlg.text.fo.find=Text to find
 GlobalSearchDlg.search.tooltip=Searches in all open SQL results and cell detail views
 GlobalSearchDlg.stop.tooltip=Stop searching
 
-GlobalSearchDlg.preview=Preview
+GlobalSearchDlg.preview=Preview of first match
 GlobSearchNodeSession.toString=Session: {0}
 
 GlobSearchNodeSqlPanel.session.main.sql.tab=Main SQL tab
@@ -40,3 +40,5 @@ GlobalSearchDlg.show.continue.message.description=Choose a time in seconds after
 GlobalSearchDlg.seconds=seconds
 
 ContinueSearchQuestion.continue.searching=Continue searching?
+
+GlobalSearchCtrl.pinned.cell.data.dialog.shows.last.result=Warning: Global result search loads the contents of the last matching cell found into the pinned cell data dialog.
