@@ -14,7 +14,13 @@ public interface FindService
 
    String getViewDataAsString(int row, int col);
 
-   void scrollToVisible(int viewRow, int viewCol, boolean selectCell);
+   /**
+    * @param adjustScrollPositonDueToTableSearchPanelBeingDisplayedLater Needed to cope with table search panel being displayed after the result table
+    *                                                                    was scrolled to the positon of a finding.
+    *                                                                    The preferable way turned out to introduce the parameter
+    *                                                                    adjustScrollPositonDueToTableSearchPanelBeingDisplayedLater.
+    */
+   void scrollToVisible(int viewRow, int viewCol, boolean selectCell, boolean adjustScrollPositonDueToTableSearchPanelBeingDisplayedLater);
 
    void setFindServiceCallBack(FindServiceCallBack findServiceCallBack);
 
