@@ -6,6 +6,11 @@ Not yet released, available in our GIT repository, snapshots and future releases
 
 Enhancements:
 
+https://github.com/squirrel-sql-client/squirrel-sql-code/issues/61 (second)
+  When searching a SQL result table with its table cell detail display open
+  or a pinned cell data dialog, occurrences of the search string will be highlighted
+  in the cell detail display and/or the cell data dialog.
+
 https://github.com/squirrel-sql-client/squirrel-sql-code/issues/63
   Aliases panel: The selected Alias can now be connected by hitting enter.
 
@@ -207,6 +212,10 @@ Table cell data popup now offers find, Xml/Json-reformatting and export function
   To open the cell data popup double-click a table cell.
 
 Bug fixes:
+
+When searching through all open SQL results, the findings were not correctly scrolled to.
+  Hint: To open the new search dialog use the menu File --> Find in all results, ctrl shift R,
+  or the new main window tool bar button.
 
 https://github.com/squirrel-sql-client/squirrel-sql-code/issues/62
   When executing a script that contains statements with the file export markers @file or
